--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,17 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: #02a3f3;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .page {
   display: flex;
   height: 100vh;
@@ -21,6 +35,7 @@
 
 .links>*:hover {
   background: #24282c;
+  text-decoration: none;
 }
 
 .content {
@@ -61,6 +76,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  scroll-behavior: smooth;
 }
 
 .message {
